--- a/index.ipynb
+++ b/index.ipynb
@@ -28,9 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/tqdm/autonotebook/__init__.py:14: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  \" (e.g. in jupyter console)\", TqdmExperimentalWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -77,17 +86,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person(object):\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, pct_vaccinated):\n",
+    "        self.is_alive = True\n",
+    "        self.is_vaccinated = np.random.random() > (1 - pct_vaccinated)\n",
+    "        self.is_infected = False\n",
+    "        self.has_been_infected = False\n",
+    "        self.newly_infected = False\n",
+    "        \n",
     "        \n",
     "    def get_vaccinated(self, pct_vaccinated):\n",
-    "        pass"
+    "        return self.is_vaccinated"
    ]
   },
   {
@@ -131,42 +145,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Simulation(object):\n",
     "    \n",
     "    def __init__(self, population_size, disease_name, r0, mortality_rate,  total_time_steps, pct_vaccinated, num_initial_infected):\n",
-    "        self.r0 = None\n",
-    "        self.disease_name = None\n",
-    "        self.mortality_rate = None\n",
-    "        self.total_time_steps = None\n",
-    "        self.current_time_step = None\n",
-    "        self.total_infected_counter = None\n",
-    "        self.current_infected_counter = None\n",
-    "        self.dead_counter = None\n",
-    "        self.population = None\n",
+    "        self.r0 = r0 / 100\n",
+    "        self.disease_name = disease_name\n",
+    "        self.mortality_rate = mortality_rate\n",
+    "        self.total_time_steps = total_time_steps\n",
+    "        self.current_time_step = 0\n",
+    "        self.total_infected_counter = 0\n",
+    "        self.current_infected_counter = 0\n",
+    "        self.dead_counter = 0\n",
+    "        self.population = []\n",
     "        # This attribute is used in a function that is provided for you in order to log statistics from each time_step.  \n",
     "        # Don't touch it!\n",
     "        self.time_step_statistics_df = pd.DataFrame()\n",
     "        \n",
     "        # Create a for loop the size of the population we want in this simulation\n",
-    "        for i in range(None):\n",
+    "        for i in range(population_size):\n",
     "            # Create new person\n",
-    "            new_person = None\n",
+    "            new_person = Person(pct_vaccinated)\n",
     "            # We'll add infected persons to our simulation first.  Check if the current number of infected are equal to the \n",
     "            # num_initial_infected parameter.  If not, set new_person to be infected\n",
-    "            if self.current_infected_counter != None:\n",
-    "                new_person.is_infected = None\n",
+    "            if self.current_infected_counter != num_initial_infected:\n",
+    "                new_person.is_infected = True\n",
     "                # don't forget to increment both infected counters!\n",
-    "                self.total_infected_counter += None\n",
-    "                self.current_infected_counter += None\n",
+    "                self.total_infected_counter += 1\n",
+    "                self.current_infected_counter += 1\n",
     "            # if new_person is not infected, determine if they are vaccinated or not by using their `get_vaccinated` method\n",
     "            # Then, append new_person to self.population\n",
     "            else:\n",
+    "                is_vaccinated = new_person.get_vaccinated()\n",
     "                \n",
-    "            self.population.append(None)\n",
+    "                \n",
+    "            self.population.append(new_person)\n",
     "       \n",
     "        print(\"-\" * 50)\n",
     "        print(\"Simulation Initiated!\")\n",
@@ -249,28 +265,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def infected_interaction(self, infected_person):\n",
-    "    num_interactions = None\n",
+    "    num_interactions = 0\n",
     "    while num_interactions < 100:\n",
     "        # Randomly select a person from self.population\n",
-    "        random_person = None\n",
+    "        random_person = random.choice(self.population)\n",
     "        # This only counts as an interaction if the random person selected is alive.  If the person is dead, do nothing, \n",
     "        # and the counter doesn't increment, repeating the loop and selecting a new person at random.\n",
     "        # check if the person is alive.\n",
-    "        if None:\n",
+    "        if random_person.is_alive:\n",
     "            # CASE: Random person is not vaccinated, and has not been infected before, making them vulnerable to infection\n",
-    "            if None and None:\n",
+    "            if not random_person.get_vaccinated() and not random_person.has_been_infected:\n",
     "                # Generate a random number between 0 and 1\n",
-    "                random_number = None\n",
+    "                random_number = np.random.random()\n",
     "                # If random_number is greater than or equal to (1 - self.r0), set random person as newly_infected\n",
-    "                if None >= None:\n",
-    "                    random_person.newly_infected = None\n",
+    "                if random_number >= (1 - self.r0):\n",
+    "                    random_person.newly_infected = True\n",
     "            # Don't forget to increment num_interactions, and make sure it's at this level of indentation\n",
-    "            num_interactions += None\n",
+    "            num_interactions += 1\n",
     "\n",
     "# Adds this function to our Simulation class\n",
     "Simulation.infected_interaction = infected_interaction"
@@ -586,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
